# PhDOld

./: #main.cpp#  .#main.cpp  CMakeLists.txt  main.cpp  main.cpp~  teubner.f
Experiment/: #Experiment.cpp#  .#Experiment.cpp  Aleph.cpp  Aleph.cpp~  Aleph.h  Aleph.h~  aleph14_vpa.f90  aleph14_vpa.f90~  experiment.cpp  experiment.cpp~  experiment.h  experiment.h~  plot.gp  plot.gp~
Mathematica/: Constants.nb  runningAlpha.nb  tests.nb
Numeric/: #Numeric.cpp#  .#Numeric.cpp  Numeric.cpp  Numeric.h  Numeric.h~
Test/: Numeric.cpp  Numeric.cpp~  Numerics.h~  Test.cpp  Test.cpp~  Test.h  Test.h~
Theory/: #theory.h#  Constants.h  Constants.h~  FCN.cpp  FCN.cpp~  FCN.h  FCN.h~  OPE.cpp  OPE.cpp~  OPE.h  OPE.h~  theory.cpp  theory.cpp~  theory.h  theory.h~
Thesis/: references.bib  thesis.aux  thesis.bbl  thesis.blg  thesis.dvi  thesis.out  thesis.tex  thesis.toc
Thesis/img/: tauOpticalTheorem.ai
Thesis/img/appendix/: tauOpticalTheorem.ai
Thesis/img/diagramTemplate/: diagramTemplate.ai
Thesis/tex/: .#appendix.tex  TayDecays.aux  appendix.aux  appendix.tex  introduction.aux  old.aux  old.tex  tauDecays.aux  tauDecays.tex
Thesis/tex/appendix/: appendix.aux  appendix.tex  appendix.tex.aux  coefficients.aux  coefficients.tex
fesr_aleph_2015/: Makefile  VAmomAleph2014.f90  aleph_aa.mod  aleph_vma.mod  aleph_vpa.mod  aleph_vv.mod  alphas_run.f90  condens.mod  cva0_const.mod  cva0_depen.mod  fesr.f90  gauss.mod  main  matrix.mod  num_const.mod  opal98.mod  out.txt  params.f90  params.mod  params_dv.mod  rge_const.f90  rge_const.mod  rpm_const.mod  rtauVpAfit.f90  s0s_fit.f90  s0s_fit.mod  s0s_out.mod  s0s_sets.mod  weights_D.f90  weights_d.mod  weights_rho.mod  weights_used.f90  weights_used.mod  writeVAmomAleph.f90
